ITT presentation submodule update

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "ITT_presentation"]
 	path = ITT_presentation
 	url = https://git.overleaf.com/5c5e2bb4c9a94f7af99dc1a9
+	branch = master
